--- a/Applications/MineCode IDE.app/Localizations/Russian.lang
+++ b/Applications/MineCode IDE.app/Localizations/Russian.lang
@@ -55,7 +55,7 @@
 	saveAs = "Сохранить как",
 	colorScheme = "Цветовая схема",
 	color = "Цвет",
-	toggleTopToolBar = "Показать панель инстурментов",
+	toggleTopToolBar = "Переключить панель инстурментов",
 	find = "Найти",
 	findSomeShit = "Давай найдем какую-нибудь хуйню…",
 	cut = "Вырезать",
@@ -66,4 +66,6 @@
 	comment = "Комментировать",
 	indent = "Табулировать",
 	unindent = "Детабулировать",
+	flashEEPROM = "Записать на EEPROM",
+	flashingEEPROM = "Идет запись на EEPROM. Не отключайте компьютер...",
 }
