Added localization dependency type when creating/updating AppMarket publication

--- a/Applications/App Market.app/Localizations/English.lang
+++ b/Applications/App Market.app/Localizations/English.lang
@@ -50,6 +50,7 @@
 	fileByURL = "File via URL",
 	add = "Add",
 	relativePath = "Relative path",
+	localizationDependency = "Localization file",
 	
 	login = "Log in",
 	profile = "Profile",
