--- a/Applications/App Market.app/Localizations/German.lang
+++ b/Applications/App Market.app/Localizations/German.lang
@@ -50,6 +50,7 @@
 	fileByURL = "Datei über URL",
 	add = "Hinzufügen",
 	relativePath = "Relativer Pfad",
+	localizationDependency = "Lokalisierungsdatei",
 	
 	login = "Anmelden",
 	profile = "Profil",
