--- a/Applications/Settings.app/Localizations/Russian.lang
+++ b/Applications/Settings.app/Localizations/Russian.lang
@@ -9,7 +9,7 @@
 	screenHeight = "Высота",
 	screenPreferredMonitor = "Монитор",
 	screenScaleInfo = "Использование этой опции позволит подобрать оптимальное разрешение экрана, чтобы избавиться от эффекта \"черных полос\"",
-	screenInvalidResolution = "Текст в полях ввода должен состоять из цифр, а максимальное разрешение не должно превышать %d символов",
+	screenInvalidResolution = "Текст в полях ввода должен состоять из цифр, по значению быть не менее %d, а максимальное разрешение не должно превышать %d пикселей",
 
 	wallpaper = "Обои и заставка",
 	wallpaperWallpaper = "Обои",
