--- a/Applications/Settings.app/Localizations/Ukrainian.lang
+++ b/Applications/Settings.app/Localizations/Ukrainian.lang
@@ -9,7 +9,7 @@
 	screenHeight = "Висота",
 	screenPreferredMonitor = "Монітор",
 	screenScaleInfo = "Використання цієї опції дозволить підібрати оптимальний дозвіл екрана, щоб позбутися від ефекту \"чорних смуг \"",
-	screenInvalidResolution = "Текст в полях введення повинен складатися з цифр, а максимальна роздільна здатність не повинно перевищувати %d символів",
+	screenInvalidResolution = "Текст в полях введення повинен складатися з цифр, повинен бути більше %d, а максимальна роздільна здатність не повинна перевищувати %d символів",
 
 	wallpaper = "Фон та заставка",
 	wallpaperWallpaper = "Шпалери",
