--- a/Applications/Settings.app/Localizations/French.lang
+++ b/Applications/Settings.app/Localizations/French.lang
@@ -9,7 +9,7 @@
 	screenHeight = "Hauteur",
 	screenPreferredMonitor = "Surveiller",
 	screenScaleInfo = "L'utilisation de cette option vous permettra de sélectionner la résolution d'écran optimale pour éliminer l'effet des \"barres noires\"",
-	screenInvalidResolution = "Le texte dans les champs de saisie doit être composé de chiffres et la résolution maximale ne doit pas dépasser %d caractères",
+	screenInvalidResolution = "Le texte dans les champs d'entrée doit être composé de chiffres, doit être supérieur à %d, et la résolution maximale ne doit pas dépasser %d caractères",
 	
 	wallpaper = "Fonds et économiseur",
 	wallpaperWallpaper = "Fonds d'écran",
