--- a/Applications/Settings.app/Localizations/Italian.lang
+++ b/Applications/Settings.app/Localizations/Italian.lang
@@ -9,7 +9,7 @@
 	screenHeight = "Altezza",
 	screenPreferredMonitor = "Monitor",
 	screenScaleInfo = "Utilizzando questa opzione vi permetterà di selezionare la risoluzione ottimale dello schermo per sbarazzarsi dell'effetto \" rettangoli neri\"",
-	screenInvalidResolution = "Il testo nei campi di input dovrebbe essere composto da cifre, e la risoluzione massima non dovrebbe superare %d caratteri",
+	screenInvalidResolution = "Il testo nei campi di input dovrebbe essere composto da cifre, dovrebbe essere superiore a %d, e la risoluzione massima non dovrebbe superare %d caratteri",
 
 	wallpaper = "Wallpaper",
 	wallpaperWallpaper = "Wallpaper",
