Added 3D Print system integration / switched app to windowed mode

--- a/Applications/3D Print.app/Localizations/English.lang
+++ b/Applications/3D Print.app/Localizations/English.lang
@@ -1,15 +1,16 @@
 {
-	exit = "Exit",
+	file = "File",
 	new = "New",
 	open = "Open",
 	save = "Save",
+	saveAs = "Save as",
 	disabled = "Disabled",
 	enabled = "Enabled",
 	add = "Add",
 	remove = "Remove",
 	rotate = "Rotate",
 	flip = "Flip",
-	color = "Color",
+	color = "C",
 	offset = "Offset",
 	scale = "Scale",
 	projectorEnabled = "Enabled",
@@ -26,7 +27,6 @@
 	tintColor = "Tint color",
 	texture = "Texture",
 	print = "Print",
-	modelSettings = "Application",
 	blockSettings = "Model properties",
 	projectorSettings = "Projector properties",
 	elementSettings = "Shape properties",
