--- a/Applications/3D Print.app/Localizations/French.lang
+++ b/Applications/3D Print.app/Localizations/French.lang
@@ -1,15 +1,16 @@
 {
-	exit = "Sortie",
-	new = "Nouveau",
-	open = "Ouvrir",
-	save = "Sauvegarder",
+	file = "File",
+	new = "New",
+	open = "Open",
+	save = "Save",
+	saveAs = "Save as",
 	disabled = "Désactivé",
 	enabled = "Activée",
 	add = "Ajouter",
 	remove = "Retirer",
 	rotate = "Tourner",
 	flip = "Retourner",
-	color = "Couleur",
+	color = "C",
 	offset = "Décalage",
 	scale = "Échelle",
 	projectorEnabled = "Activée",
@@ -26,7 +27,6 @@
 	tintColor = "Couleur de teinte",
 	texture = "Texture",
 	print = "Print",
-	modelSettings = "Application",
 	blockSettings = "Propriétés du modèle",
 	projectorSettings = "Propriétés du projecteur",
 	elementSettings = "Propriétés de forme",
