--- a/Applications/3D Print.app/Localizations/Russian.lang
+++ b/Applications/3D Print.app/Localizations/Russian.lang
@@ -1,15 +1,16 @@
-{
-	exit = "Выйти",
-	new = "Создать",
+{	
+	file = "Файл",
+	new = "Новый",
 	open = "Открыть",
 	save = "Сохранить",
+	saveAs = "Сохранить как",
 	disabled = "Пассив",
 	enabled = "Актив",
 	add = "Добавить",
 	remove = "Удалить",
 	rotate = "Повернуть",
 	flip = "Отразить",
-	color = "Цвет",
+	color = "Ц",
 	offset = "Отступ",
 	scale = "Масштаб",
 	projectorEnabled = "Включить",
@@ -26,7 +27,6 @@
 	tintColor = "Цвет оттенка",
 	texture = "Текстура",
 	print = "Напечатать",
-	modelSettings = "Приложение",
 	blockSettings = "Параметры блока",
 	projectorSettings = "Параметры проектора",
 	elementSettings = "Параметры элемента",
