--- a/Applications/3D Print.app/Localizations/Ukrainian.lang
+++ b/Applications/3D Print.app/Localizations/Ukrainian.lang
@@ -1,15 +1,16 @@
 {
-	exit = "Вийти",
-	new = "Створити",
+	file = "Фаiл",
+	new = "Новiй",
 	open = "Відкрити",
 	save = "Зберегти",
+	saveAs = "Зберегти как",
 	disabled = "Пасив",
 	enabled = "Актив",
 	add = "Додати",
 	remove = "Видалити",
 	rotate = "Повернути",
 	flip = "Відобразити",
-	color = "Колір",
+	color = "Ц",
 	offset = "Відступ",
 	scale = "Масштаб",
 	projectorEnabled = "Увімкнути",
@@ -26,7 +27,6 @@
 	tintColor = "Колір відтінку",
 	texture = "Текстура",
 	print = "Надрукувати",
-	modelSettings = "Додаток",
 	blockSettings = "Параметри блоку",
 	projectorSettings = "Параметри проектора",
 	elementSettings = "Параметри елемента",
