Added shape selection with right-click on it for 3D Print

--- a/Applications/3D Print.app/Localizations/Russian.lang
+++ b/Applications/3D Print.app/Localizations/Russian.lang
@@ -1,4 +1,12 @@
 {	
+	help = "Справка",
+	helpInfo = {
+		"• Каждая модель состоит из элементов. Их количество зависит от свойств сервера, но по умолчанию их 24 на одну модель",
+		"• Модель также может иметь 2 состояния: пассивное и активное. Если вы разместите напечатанную модель в мире и кликните на нее, модель изменит свое состояние на противоположное. Число элементов ограничено для обоих состояний",
+		"• Удерживайте левую кнопку мыши, чтобы разместить первую точку элемента по X и Y. Перетащите мышь, чтобы изменить размер фигуры. Используйте колесо мыши для изменения Z-координаты. Отпустите кнопку, чтобы закончить редактирование элемента",
+		"• Нажмите правую кнопку мыши, чтобы выбрать элемент под курсором",
+		"• Прокрутите панель инструментов для отображения других параметров",
+	},
 	file = "Файл",
 	new = "Новый",
 	open = "Открыть",
