--- a/Applications/3D Print.app/Localizations/English.lang
+++ b/Applications/3D Print.app/Localizations/English.lang
@@ -1,4 +1,12 @@
-{
+{	
+	help = "Help",
+	helpInfo = {
+		"• Every model consists of shapes. Their count depends of server properties, but by default it's 24 per one model",
+		"• Model also can have 2 states: passive and active. If you place printed model in minecraft world and perform a click on it, model will change it's state to the opposite. Shape count is limited to both states",
+		"• Hold left mouse button to place first point of shape by X and Y. Drag mouse to resize shape. Use mouse wheel to change Z coordinate. Release button to finish shape editing",
+		"• Press right mouse button to select shape under cursor",
+		"• Scroll toolbar to show other options",
+	},
 	file = "File",
 	new = "New",
 	open = "Open",
