--- a/Applications/MineCode IDE.app/Localizations/English.lang
+++ b/Applications/MineCode IDE.app/Localizations/English.lang
@@ -1,6 +1,7 @@
 {
-	enableSyntaxHighlight = "Enable syntax highlighting",
-	disableSyntaxHighlight = "Disable syntax highlighting",
+	toggleSyntaxHighlight = "Toggle syntax highlighting",
+	toggleAutocompletion = "Toggle autocompletion",
+	toggleAutoBrackets = "Toggle autobrackets",
 	toUpperCase = "To upper",
 	toLowerCase = "To lower",
 	convertCase = "Convert case",
@@ -13,11 +14,7 @@
 	continueDebug = "Continue",
 	gotoLine = "Goto line",
 	lineNumber = "Line",
-	enableAutocompletion = "Enable autocompletion",
-	disableAutocompletion = "Disable autocompletion",
 	selectAndPasteColor = "Select and paste color",
-	enableAutoBrackets = "Enable autobrackets",
-	disableAutoBrackets = "Disable autobrackets",
 	url = "http://example.com/something.lua",
 	getFromWeb = "Open from URL",
 	downloading = "Downloading file...",
