--- a/Applications/MineCode IDE.app/Localizations/French.lang
+++ b/Applications/MineCode IDE.app/Localizations/French.lang
@@ -1,6 +1,7 @@
 {
-	enableSyntaxHighlight = "Activer la coloration syntaxique",
-	disableSyntaxHighlight = "Désactiver la coloration syntaxique",
+	toggleSyntaxHighlight = "Toggle syntax highlighting",
+	toggleAutocompletion = "Toggle autocompletion",
+	toggleAutoBrackets = "Toggle autobrackets",
 	toUpperCase = "Monter",
 	toLowerCase = "Baisser",
 	convertCase = "Convertir le cas",
@@ -13,11 +14,7 @@
 	continueDebug = "Continuer",
 	gotoLine = "Aller à la ligne",
 	lineNumber = "Ligne",
-	enableAutocompletion = "Activer l'auto-complétion",
-	disableAutocompletion = "Désactiver l'auto-complétion",
 	selectAndPasteColor = "Sélectionnez et collez la couleur",
-	enableAutoBrackets = "Activer le crochetage automatiques",
-	disableAutoBrackets = "Désactiver le crochetage automatiques",
 	url = "http://example.org/quelquechose.lua",
 	getFromWeb = "Télécharger depuis une URL",
 	downloading = "Téléchargement du fichier...",
