--- a/Applications/MineCode IDE.app/Localizations/German.lang
+++ b/Applications/MineCode IDE.app/Localizations/German.lang
@@ -1,6 +1,7 @@
 {
-	enableSyntaxHighlight = "Syntaxhervorhebung aktivieren",
-	disableSyntaxHighlight = "Syntaxhervorhebung deaktivieren",
+	toggleSyntaxHighlight = "Toggle syntax highlighting",
+	toggleAutocompletion = "Toggle autocompletion",
+	toggleAutoBrackets = "Toggle autobrackets",
 	toUpperCase = "Nach oben",
 	toLowerCase = "Senken",
 	convertCase = "Konvertieren Fall",
@@ -13,11 +14,7 @@
 	continueDebug = "Weiterhin",
 	gotoLine = "Gehe zu Zeile",
 	lineNumber = "Linie",
-	enableAutocompletion = "Autovervollständigung aktivieren",
-	disableAutocompletion = "Autovervollständigung deaktivieren",
 	selectAndPasteColor = "Farbe auswählen und einfügen",
-	enableAutoBrackets = "Automatische Klammern aktivieren",
-	disableAutoBrackets = "Automatische Klammern deaktivieren",
 	url = "http://example.com/something.lua",
 	getFromWeb = "Von URL öffnen",
 	downloading = "Herunterladenzeit...",
