--- a/Applications/MineCode IDE.app/Localizations/Italian.lang
+++ b/Applications/MineCode IDE.app/Localizations/Italian.lang
@@ -1,6 +1,7 @@
 {
-	enableSyntaxHighlight = "Attiva evidenziazione sintassi",
-	disableSyntaxHighlight = "Disabilita evidenziazione sintassi",
+	toggleSyntaxHighlight = "Toggle syntax highlighting",
+	toggleAutocompletion = "Toggle autocompletion",
+	toggleAutoBrackets = "Toggle autobrackets",
 	toUpperCase = "In alto",
 	toLowerCase = "Abbassare",
 	convertCase = "Converti maiuscole / minuscole",
@@ -13,11 +14,7 @@
 	continueDebug = "Continuare",
 	gotoLine = "Va alla riga",
 	lineNumber = "Linea",
-	enableAutocompletion = "Abilita completamento automatico",
-	disableAutocompletion = "Disabilita completamento automatico",
 	selectAndPasteColor = "Seleziona e incolla colore",
-	enableAutoBrackets = "Abilita parentesi automatiche",
-	disableAutoBrackets = "Disabilita parentesi automatiche",
 	url = "http://example.com/something.lua",
 	getFromWeb = "Apri DALL'URL",
 	downloading = "Scaricamento file...",
