--- a/Applications/MineCode IDE.app/Localizations/Russian.lang
+++ b/Applications/MineCode IDE.app/Localizations/Russian.lang
@@ -1,6 +1,7 @@
 {
-	enableSyntaxHighlight = "Включить подсветку синтаксиса",
-	disableSyntaxHighlight = "Отключить подсветку синтаксиса",
+	toggleSyntaxHighlight = "Вкл/выкл подсветку синтаксиса",
+	toggleAutocompletion = "Вкл/выкл автодополнение",
+	toggleAutoBrackets = "Вкл/выкл автоскобки",
 	toUpperCase = "В верхний",
 	toLowerCase = "В нижний",
 	convertCase = "Преобразовать регистр",
@@ -13,11 +14,7 @@
 	continueDebug = "Продолжить",
 	gotoLine = "Перейти к строке",
 	lineNumber = "Номер строки",
-	enableAutocompletion = "Включить автодополнение",
-	disableAutocompletion = "Отключить автодополнение",
 	selectAndPasteColor = "Выбрать и вставить цвет",
-	enableAutoBrackets = "Включить авто-скобки",
-	disableAutoBrackets = "Отключить авто-скобки",
 	url = "http://example.com/something.lua",
 	getFromWeb = "Открыть по URL",
 	downloading = "Идет загрузка файла...",
