--- a/Applications/MineCode IDE.app/Localizations/Ukrainian.lang
+++ b/Applications/MineCode IDE.app/Localizations/Ukrainian.lang
@@ -1,6 +1,7 @@
 {
-	enableSyntaxHighlight = "Включити підсвічування синтаксису",
-	disableSyntaxHighlight = "Відключити підсвічування синтаксису",
+	toggleSyntaxHighlight = "Toggle syntax highlighting",
+	toggleAutocompletion = "Toggle autocompletion",
+	toggleAutoBrackets = "Toggle autobrackets",
 	toUpperCase = "У верхній",
 	toLowerCase = "У нижній",
 	convertCase = "Перетворити регістр",
@@ -13,11 +14,7 @@
 	continueDebug = "Продовжити",
 	gotoLine = "Перейти до рядка",
 	lineNumber = "Номер рядка",
-	enableAutocompletion = "Включити автодоповнення",
-	disableAutocompletion = "Відключити автодоповнення",
 	selectAndPasteColor = "Вибрати і вставити колір",
-	enableAutoBrackets = "Включити авто-дужки",
-	disableAutoBrackets = "Відключити авто-дужки",
 	url = "http://example.com/something.lua",
 	getFromWeb = "Завантажити з URL",
 	debugging = "Отладчик на рядку",
