Added List View mode for Finder, instant launch feature for .lua extension and some improvements for icons selection

--- a/Localizations/English.lang
+++ b/Localizations/English.lang
@@ -25,6 +25,7 @@
 	closeAllWindows = "Close all windows",
 	closeWindow = "Close",
 	newWindow = "New window",
+	launch = "Launch",
 	launchWithArguments = "Launch with arguments",
 	dontShowAnymore = "Don't show again",
 	newName = "New name",
@@ -34,14 +35,14 @@
 	file = "File",
 	notExists = "not exists",
 	alreadyExists = "already exists",
-	inDirectory = "in directory",
+	inDirectory = "in folder",
 	needReplace = "Replace it?",
 	yes = "Yes",
 	no = "No",
 	cancel = "Cancel",
 	open = "Open",
 	applyToAll = "Apply to all",
-	toDirectory = "to directory",
+	toDirectory = "to folder",
 	copying = "Copying",
 	faylaBlyad = "file",
 
@@ -50,6 +51,7 @@
 	type = "Type",
 	size = "Size",
 	date = "Date",
+	name = "Name",
 	path = "Path",
 	folder = "Folder",
 	unknown = "Unknown",
@@ -101,7 +103,7 @@
 	shortcutIsCorrupted = "Shortcut is linked to non-existent file",
 	sortAutomatically = "Align to grid",
 	onDesktop = "On desktop",
-	inCurrentDirectory = "In current directory",
+	inCurrentDirectory = "In current folder",
 
 	errorWhileRunningProgram = "Error while running ",
 	sendedFeedback = "Feedback was sent",
