--- a/Localizations/French.lang
+++ b/Localizations/French.lang
@@ -25,6 +25,7 @@
 	closeAllWindows = "Fermez toutes les fenêtres",
 	closeWindow = "Fermer",
 	newWindow = "Nouvelle fenetre",
+	launch = "Lancement",
 	launchWithArguments = "Lancement avec des arguments",
 	dontShowAnymore = "Ne plus afficher",
 	newName = "Renommé",
@@ -50,6 +51,7 @@
 	type = "Type",
 	size = "Taille",
 	date = "Date",
+	name = "Prénom",
 	path = "Chemin d'accès",
 	folder = "Dossier",
 	unknown = "Inconnu",
