--- a/Localizations/German.lang
+++ b/Localizations/German.lang
@@ -25,6 +25,7 @@
 	closeAllWindows = "Alle Fenster schließen",
 	closeWindow = "Schließen",
 	newWindow = "Neues Fenster",
+	launch = "Starten",
 	launchWithArguments = "Starten mit Argumenten",
 	dontShowAnymore = "Nicht wieder anzeigen",
 	newName = "Neuer name",
@@ -50,6 +51,7 @@
 	type = "Art",
 	size = "Größe",
 	date = "Datum",
+	name = "Name",
 	path = "Pfad",
 	folder = "Ordner",
 	unknown = "Unbekannt",
