--- a/Localizations/Italian.lang
+++ b/Localizations/Italian.lang
@@ -25,6 +25,7 @@
 	closeAllWindows = "CHIUDI tutte le finestre",
 	closeWindow = "Vicino",
 	newWindow = "Nuova finestra",
+	launch = "Avvia",
 	launchWithArguments = "Avvia con argomenti",
 	dontShowAnymore = "Non farti più vedere.",
 	newName = "Nuovo nome",
@@ -50,6 +51,7 @@
 	type = "Tipo",
 	size = "Dimensione",
 	date = "Data",
+	name = "Nome",
 	path = "Percorso",
 	folder = "Cartella",
 	unknown = "Sconosciuto",
