--- a/Localizations/Russian.lang
+++ b/Localizations/Russian.lang
@@ -25,6 +25,7 @@
 	closeAllWindows = "Закрыть все окна",
 	closeWindow = "Закрыть",
 	newWindow = "Новое окно",
+	launch = "Запустить",
 	launchWithArguments = "Запустить с аргументами",
 	dontShowAnymore = "Больше не показывать",
 	newName = "Новое имя",
@@ -50,6 +51,7 @@
 	type = "Тип",
 	size = "Размер",
 	date = "Дата",
+	name = "Имя",
 	path = "Путь",
 	folder = "Папка",
 	unknown = "Неизвестно",
