--- a/Localizations/Ukrainian.lang
+++ b/Localizations/Ukrainian.lang
@@ -25,6 +25,7 @@
 	closeAllWindows = "Закрити всі вікна",
 	closeWindow = "Закривати",
 	newWindow = "Нове вікно",
+	launch = "Запуск",
 	launchWithArguments = "Запуск з аргументами",
 	dontShowAnymore = "Більше не показувати ",
 	newName = "Нове ім'я",
@@ -50,6 +51,7 @@
 	type = "Тип",
 	size = "Розмір",
 	date = "Дата",
+	name = "Ім'я",
 	path = "Шлях",
 	folder = "Папка",
 	unknown = "Невідомий",
