--- a/Applications/3D Print.app/Localizations/Ukrainian.lang
+++ b/Applications/3D Print.app/Localizations/Ukrainian.lang
@@ -2,14 +2,14 @@
 	help = "Довідка",
 	helpInfo = {
 		"• Кожна модель складається з форм. Їх кількість залежить від властивостей сервера, але за замовчуванням це 24 на одну модель",
-		"• Модель також може мати 2 стани: пасивний і активний. Якщо ви розміщуєте друковану модель в світі миних і виконуєте клацання по ній, модель змінить свій стан на протилежне. Кількість фігур обмежена обома станами",
+		"• Модель також може мати 2 стани: пасивний і активний. Якщо ви розміщуєте друковану модель в світі і клацнете по ній, модель змінить свій стан на протилежний. Кількість фігур обмежена обома станами",
 		"• Утримуйте ліву кнопку миші, щоб розмістити першу точку фігури за допомогою X і Y. Перетягніть мишу, щоб змінити розмір фігури. Використовуйте колесо миші для зміни координати Z. Відпустіть кнопку, щоб завершити редагування форми",
 		"• Натисніть праву кнопку миші, щоб вибрати фігуру під курсором",
 		"• Перейдіть на панель інструментів, щоб показати інші опції",
 	},
 	file = "Файл",
 	new = "Новий",
-	open = "Відчинено",
+	open = "Відкрити",
 	save = "Зберегти",
 	saveAs = "Зберегти як",
 	disabled = "Вимкнено",
@@ -18,20 +18,20 @@
 	remove = "Видалити",
 	rotate = "Повернути",
 	flip = "Відобразити",
-	color = "C",
+	color = "К",
 	offset = "Зсув",
 	scale = "Масштаб",
 	projectorEnabled = "Увімкнено",
-	xAxis = "Вісь Х",
+	xAxis = "Х-вісь",
 	yAxis = "Y-вісь",
 	zAxis = "Z-вісь",
 	lightLevel = "Рівень освітлення",
-	emitRedstone = "Виділяють червоні камені",
-	collidable = "Зіткнення",
+	emitRedstone = "Редстоун-сигнал",
+	collidable = "Колізія",
 	buttonMode = "Режим кнопки",
 	label = "Мітка",
 	tooltip = "Підказка",
-	tintEnabled = "Використовуйте відтінок",
+	tintEnabled = "Використовувати відтінок",
 	tintColor = "Колір відтінку",
 	texture = "Текстура",
 	print = "Друк",
