Correction IDE/Ukrainian.lang

--- a/Applications/MineCode IDE.app/Localizations/Ukrainian.lang
+++ b/Applications/MineCode IDE.app/Localizations/Ukrainian.lang
@@ -1,7 +1,7 @@
 {
-	toggleSyntaxHighlight = "Toggle syntax highlighting",
-	toggleAutocompletion = "Toggle autocompletion",
-	toggleAutoBrackets = "Toggle autobrackets",
+	toggleSyntaxHighlight = "Переключити підсвічування синтаксису",
+	toggleAutocompletion = "Переключити автодоповнення",
+	toggleAutoBrackets = "Переключити автодужки",
 	toUpperCase = "У верхній",
 	toLowerCase = "У нижній",
 	convertCase = "Перетворити регістр",
@@ -17,12 +17,13 @@
 	selectAndPasteColor = "Вибрати і вставити колір",
 	url = "http://example.com/something.lua",
 	getFromWeb = "Завантажити з URL",
+	downloading = "Триває завантаження файлу...",
 	debugging = "Отладчик на рядку",
 	runtimeError = "Помилка при виконанні програми",
-	variablesNotAvailable = "Чи не знайдено можливих змінних",
+	variablesNotAvailable = "Не знайдено можливих змінних",
 	variables = "Значення змінних:",
 	pathToFile = "Шлях до файлу",
-	selectWord = "Виділити поточний слово",
+	selectWord = "Виділити поточне слово",
 	gotoCyka = "Перехід",
 	gotoEnd = "В кінець",
 	gotoStart = "На початок",
@@ -34,12 +35,12 @@
 	cursorColor = "Колір",
 	cursorBlinkDelay = "Час миготіння",
 	selection = "Виділення: ",
-	none = "нет",
+	none = "немає",
 	properties = "Налаштування",
 	about = "Про програму",
 	quit = "Вийти з MineCode",
 	line = " рядок, ",
-	symbol = " символ ",
+	symbol = " символ",
 	lines = " рядків, ",
 	symbols = " символів",
 	file = "Файл",
@@ -51,7 +52,7 @@
 	saveAs = "Зберегти як",
 	colorScheme = "Схема кольорів",
 	color = "Колір",
-	toggleTopToolBar = "Переключити панель Інстурмент",
+	toggleTopToolBar = "Переключити панель інструментів",
 	find = "Знайти",
 	findSomeShit = "Давай знайдемо якесь лайно ...",
 	cut = "Вирізати",
@@ -62,6 +63,6 @@
 	comment = "Коментувати",
 	indent = "Табулювати",
 	unindent = "Детабулювати",
-	flashEEPROM = "Спалах до EEPROM",
+	flashEEPROM = "Записати на EEPROM",
 	flashingEEPROM = "Блимає в процесі. Не вимикати комп'ютер...",
 }
