--- a/Applications/Nanomachines.app/Localizations/Ukrainian.lang
+++ b/Applications/Nanomachines.app/Localizations/Ukrainian.lang
@@ -4,15 +4,15 @@
 	received = "Отримано",
 	nothingFound = "Ефекти не виявлені",
 	instructionTitle = "Інструкція",
-	instructionData = "У лівій частині екрана є перемикачі, повідомляють наніта про необхідність активації Біоконтакт. Кожна людина має унікальну конфігурацію Біоконтакт, що дозволяє наніта накладати різні Баффі / дебафф. Активація 2 контактів безпечна для життя, більше ж число заподіє серйозні каліцтва. Одночасно можна активувати не більше 4 контактів. Експериментуйте, шукайте бажані ефекти і додавайте їх в обране для подальшого використання. Кнопка \"зберегти конфігурацію \"корисна для передачі іншим вашої конфігурації наніта (для цього необхідно мати в інвентарі створений екземпляр)",
+	instructionData = "У лівій частині екрана є перемикачі, повідомляючі наніта про необхідність активації біоконтактів. Кожна людина має унікальну конфігурацію біоконтактів, що дозволяє нанітам накладати різні баффи/дебаффи. Активація 2 контактів безпечна для життя, більше ж число заподіє серйозні каліцтва. Одночасно можна активувати не більше 4 контактів. Експериментуйте, шукайте бажані ефекти і додавайте їх в обране для подальшого використання. Кнопка \"зберегти конфігурацію \"корисна для передачі іншим вашої конфігурації нанітів (для цього необхідно мати в інвентарі створений екземпляр)",
 	syncWelcome = "Ласкаво просимо",
-	syncInfo = "Перед використанням програми створіть і випийте пакет наніта. Потім підійдіть впритул до системного блоку або серверній стійці з встановленим бездротовим модемом для синхронізації",
-	syncProgress = "Йде синхронізація з наніта, не відходьте від комп'ютера до завершення процесу: ",
-	syncContacts = "оновлення біоконтакт %d з %d",
+	syncInfo = "Перед використанням програми створіть і випийте пакет нанітів. Потім підійдіть впритул до системного блоку або серверної стійки з встановленим бездротовим модемом для синхронізації",
+	syncProgress = "Йде синхронізація з нанітами, не відходьте від комп'ютера до завершення процесу: ",
+	syncContacts = "оновлення біоконтакту %d з %d",
 	favourites = "Вибрані ефекти",
 	saveConfiguration = "Зберегти конфігурацію",
-	saveFailed = "Збереження не вдалося: в інвентарі немає несконфігурірованних наніта",
-	notSynced = "Відбулася розсинхронізація з наніта. Будь ласка, закрийте програму і запустити знову.",
-	notWireless = "Комп'ютер має модем, проте наніти сприймають команди виключно по бездротовій мережі. Вставте бездротової модем і спробуйте ще раз",
-	noModem = "Комп'ютер не має бездротового модему для відправки і прийому команд Наніта по мережі",
+	saveFailed = "Збереження не вдалося: в інвентарі немає несконфігурірованних нанітів",
+	notSynced = "Відбулася розсинхронізація з нанітами. Будь ласка, закрийте програму і запустіть знову.",
+	notWireless = "Комп'ютер має модем, проте наніти сприймають команди виключно по бездротовій мережі. Вставте бездротовоий модем і спробуйте ще раз",
+	noModem = "Комп'ютер не має бездротового модему для відправки і прийому команд нанітів по мережі",
 }
