--- a/Localizations/Chinese.lang
+++ b/Localizations/Chinese.lang
@@ -33,8 +33,8 @@
 	fileName = "文件名称",
 	applicationName = "应用名称",
 	file = "文件",
-	notExists = "没有",
-	alreadyExists = "已有",
+	notExists = "未找到文件",
+	alreadyExists = "已有文件",
 	inDirectory = "在文件夹里",
 	needReplace = "是否要更换？",
 	yes = "确定",
@@ -74,13 +74,13 @@
 	editShortcut = "编辑路径",
 	createShortcut = "创建路径",
 	addToDock = "添加到Dock",
-	removeFromDock = "从Dock删除",
+	removeFromDock = "从Dock中删除",
 	moveRight = "向右移动",
 	moveLeft = "向左移动",
 	archive = "添加到文件",
 	delete = "删除",
 	addToFavourites = "添加到收藏夹",
-	removeFromFavourites = "从收藏夹删除",
+	removeFromFavourites = "从收藏夹中删除",
 	setAsWallpaper = "设置壁纸",
 	showPackageContent = "显示内容",
 	showContainingFolder = "显示其中的文件夹",
@@ -119,6 +119,6 @@
 	uploadToPastebin = "上传到Pastebin",
 	pasteName = "Paste name",
 	uploading = "正在上传",
-	uploadingSuccess = "上传到",
+	uploadingSuccess = "上传到..",
 	uploadingFailure = "无法上传",
 }
