small translation update

--- a/Installer/Localizations/French.lang
+++ b/Installer/Localizations/French.lang
@@ -1,22 +1,22 @@
 {
 	username = "Nom d'utilisateur",
 	password = "Mot de passe",
-	submitPassword = "Soumettre mot de passe",
-	passwordsArentEqual = "Les mots de passe ne sont pas égaux",
-	withoutPassword = "Sans mot de passe:",
-	wallpapers = "Peint:",
-	screensavers = "Économiseur:",
-	applications = "Les applications tierces:",
-	languages = "Des packs de langue:",
-	accept = "J'accepte:",
-	select = "Sélectionnez système de fichiers pour l'installation",
+	submitPassword = "Enregistrer le mot de passe",
+	passwordsArentEqual = "Les mots de passe ne sont pas les mêmes. Veuillez réessayer.",
+	withoutPassword = "Ne pas utiliser de mot de passe:",
+	wallpapers = "Fond d'écran:",
+	screensavers = "Écran de veille:",
+	applications = "Applications tierces:",
+	languages = "Packs de langue:",
+	accept = "J'accepte ce charabia:",
+	select = "Sélectionnez un disque pour l'installation",
 	erase = "Effacer",
-	used = "utiliser",
+	used = "Utiliser",
 	setup = "Configurer votre profil",
 	customize = "Personnaliser les téléchargements",
-	flashing = "EEPROM clignotant...",
-	creating = "La création d'un profil d'utilisateur...",
+	flashing = "Installation du EEPROM...",
+	creating = "Création de votre profil d'utilisateur...",
 	installing = "Installer",
 	installed = "MineOS à bien été installé. Amusez-vous bien!",
-	reboot = "Redémarrer",
+	reboot = "Redémarrer l'ordinateur !",
 }
